pequena correcao para funcionar

--- a/views/list.jade
+++ b/views/list.jade
@@ -7,5 +7,5 @@ block content
   ul
   for beer in beers
     li
-    a(href='/beer/#{beer.id}')
+    a(href='/beer/#{beer._id}')
     | #(beer.name) - #(beer.price)
